# TrainableFlowThruCounter

./: .gitattributes  .gitignore  CMakeLists.txt  CodingTaskList.txt  Dictionary  Doxyfile  EclipseDictionary  LarcosCounter.sln  ReleaseNotes.docx  TaskList.txt  TrainableFlowThruCounter.sln  UpdateTrainApp.bat
.metadata/: .gitignore  version.ini
CounterInstaller/: CounterInstaller.vdproj
CounterLibraries/: CMakeLists.txt
CounterLibraries/CounterUnManaged/: .cproject  .project  CMakeLists.txt  CameraAcquisition.cpp  CameraAcquisition.h  CameraAcquisitionPleora.cpp  CameraAcquisitionPleora.h  CameraAcquisitionPleoraDalsa.h  CameraAcquisitionPleora_Temp.cpp  CameraAcquisitionSimulator.cpp  CameraAcquisitionSimulator.h  CameraAutoGainThread.cpp  CameraAutoGainThread.h  CameraFlatFieldCorrection.cpp  CameraFlatFieldCorrection.h  CameraFrame.cpp  CameraFrame.h  CameraFrameBuffer.cpp  CameraFrameBuffer.h  CameraParameters.cpp  CameraParameters.h  CameraThread.cpp  CameraThread.h  ConnectButtonThread.cpp  ConnectButtonThread.h  CounterDataRec.cpp  CounterDataRec.h  CounterFVProducer.cpp  CounterFVProducer.h  CounterFeatureVector.cpp  CounterFeatureVector.h  CounterManager.cpp  CounterManager.h  CounterScannerFileEntry.cpp  CounterScannerFileEntry.h  CounterStats.cpp  CounterStats.h  CounterTrainingConfiguration.cpp  CounterTrainingConfiguration.h  CounterTrainingModel.cpp  (+49 more)
KKBase-Test/: .cproject  .project
LarcosSetup/: LarcosSetup.vdproj
LarcosSetup2015_advinst2/: LarcosSetup2015_advinst2.aiproj
LarcosSetup2015_advinst3/: LarcosSetup2015_advinst3.aiproj
(+687 files in other folders)
